finding the avarage

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <input ng-model="gc.searchKeyword">
     </md-input-container>
     <md-button class="md-raised" ng-click="gc.search()">Search</md-button>
+    <md-button class="md-raised" ng-click="gc.getAvg()">getaverage</md-button>
     </div>
 </body>
 <!-- Angular.js -->
