finding the avarage

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 <!-- Jquery Lib -->
 <script src="js/jquery2.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <script src="js/jquery.min.js"></script>
+
+<script src="js/angular-chart.min.js"></script>
+<!-- <script src="js/Chart.min.js"></script> -->
 <!-- Bootstrap.js -->
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <!-- This one is for router -->
