add the pie chrt snippet

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </md-input-container>
     <md-button class="md-raised" ng-click="gc.search()">Search</md-button>
     <md-button class="md-raised" ng-click="gc.getAvg()">getaverage</md-button>
+    <md-button class="md-raised" ng-click="gc.getMark()">piechart</md-button>
     </div>
 </body>
 <!-- Angular.js -->
