adding chart link

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Angular material css -->
     <link rel="stylesheet" href="css/angular-material.min.css">
     <!-- Device mokeup CSS -->
+    <link rel="stylesheet" type="text/css" href="css/angular-chart.min.css">
     <!-- Custom css -->
     <link href="css/custom.css" rel="stylesheet">
 </head>
